Some minor change in text

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <header>
       <div class="container">
-        <h1>Underhacker.GitHub.io</h1>
-        <h2>Underhacker group main website.</h2>
+        <h1>Underhacker Group</h1>
+        <h2>Underhacker's website.</h2>
 
         <section id="downloads">
           <a href="https://github.com/Underhacker" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
@@ -30,6 +30,8 @@
 <a id="welcome-to-underhacker-group" class="anchor" href="#welcome-to-underhacker-group" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Underhacker Group</h3>
 
 <p>Underhacker will takeover!</p>
+<p>Underhacker Group is in its infancy. We hope to make everyone who desires to be a hacker a hacker.</p>
+<p>Every kind of open project, for any purpose, can be created in this organization, and we are willing to collaborate with each other.</p>
 
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
