Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,37 +1,36 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Underhacker.GitHub.io : Underhacker group main website.">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Underhacker Group</title>
+    <title>Underhacker.GitHub.io</title>
   </head>
 
   <body>
 
-    <header>
-      <div class="container">
-        <h1>Underhacker Group</h1>
-        <h2>Underhacker's website.</h2>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/Underhacker">View on GitHub</a>
 
-        <section id="downloads">
-          <a href="https://github.com/Underhacker" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+          <h1 id="project_title">Underhacker.GitHub.io</h1>
+          <h2 id="project_tagline">Underhacker group main website.</h2>
 
-    <div class="container">
-      <section id="main_content">
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h3>
 <a id="welcome-to-underhacker-group" class="anchor" href="#welcome-to-underhacker-group" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Underhacker Group</h3>
 
 <p>Underhacker will takeover!</p>
-<p>Underhacker Group is in its infancy. We hope to make everyone who desires to be a hacker a hacker.</p>
-<p>Every kind of open project, for any purpose, can be created in this organization, and we are willing to collaborate with each other.</p>
 
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
@@ -40,6 +39,14 @@
       </section>
     </div>
 
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
