Change project title

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/Underhacker">View on GitHub</a>
 
-          <h1 id="project_title">Underhacker.GitHub.io</h1>
+          <h1 id="project_title">Underhacker Group</h1>
           <h2 id="project_tagline">Underhacker group main website.</h2>
 
         </header>
