--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
 <p>Underhacker will take over!</p>
 
 <h3>
+    <a id="who" class="anchor" href="#who" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Who are we?
+</h3>
+
+<p>We are members of the open group Underhacker. The group is supposed to be a great place to build a deeply linked hacker society and harvest new hackers. The name "Underhacker", means that we will never stop, and will learn and fight forever, like underdogs, for freedom and future.</p>
+
+<h3>
+    <a id="projects" class="anchor" href="#projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Current Projects
+</h3>
+
+<p><a href="https://github.com/Underhacker/Infohub">Infohub</a>: An informational expert system.</p>
+
+<h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
 
 <p>Please contact Augustus Huang (<a href="https://github.com/AugustusHuang" class="user-mention">@AugustusHuang</a>) or Yilong Li (<a href="https://github.com/dragonly" class="user-mention">@dragonly</a>).</p>
